--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
 	margin:                    auto;
 	text-align:                left;
 	font-size:                 10pt;
+	box-shadow:                0 0 7px 0 rgba(0, 0, 0, 0.3);
 }
 #page-content {
 	margin:                    0;
